--- a/lovely/dynablind.toml
+++ b/lovely/dynablind.toml
@@ -23,3 +23,12 @@ G.GAME.round_resets.blind_ante = G.GAME.round_resets.blind_ante + 1
 local blind_amt = StrangeLib.dynablind.get_blind_score(blind)
 G.GAME.round_resets.blind_ante = old_blind_ante'''
 match_indent = true
+
+# Allow custom blind size localization
+[[patches]]
+[patches.pattern]
+target = "functions/UI_definitions.lua"
+pattern = "{n=G.UIT.T, config={text = blind.mult..localize('k_x_base'), scale = 0.4, colour = G.C.RED}},"
+position = "at"
+payload = "{n=G.UIT.T, config={text = G.localization.descriptions.Blind[blind.key].score_at_least or blind.mult..localize('k_x_base'), scale = 0.4, colour = G.C.RED}},"
+match_indent = true
