use `SMODS.is_poker_hand_visible`

--- a/lovely.toml
+++ b/lovely.toml
@@ -9,5 +9,5 @@ priority = 0
 target = "functions/common_events.lua"
 pattern = "if (not v.config.softlock or G.GAME.hands[v.config.hand_type].played > 0) then"
 position = "at"
-payload = "if G.GAME.hands[v.config.hand_type].visible then"
+payload = "if SMODS.is_poker_hand_visible(v.config.hand_type) then"
 match_indent = true
